edited output to console not inline

--- a/covid_19_states.Rmd
+++ b/covid_19_states.Rmd
@@ -3,6 +3,8 @@ title: "States Data"
 author: "Dominic Skinnion"
 date: "7/9/2020"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
